feat: update solution